feature: Added messages list backend

--- a/public/app/modules/messages/main.html
+++ b/public/app/modules/messages/main.html
@@ -12,9 +12,11 @@
             </button>
         </div>
     </div>
-    <div class="col-md-16">
-        <div>
-
+    <div class="col-md-16 u-m-t-5 u-textRight">
+        <div class="col-md-offset-11 col-md-5">
+            <a ui-sref="messages.create" class="btn btn-complete"><!--make filter-->
+                Compose
+            </a>
         </div>
     </div>
 </div>
